ipc/ipdl/test/ipdl/error/parser.ipdl
//error: bad syntax near `???'

protocol parser {
